2007-08-27  Sancho Lerena  <slerena@gmail.com>

        * lib/PandoraFMS/Config.pm: Updated version string.

        * bin/pandora_network: Fixed BUG with SNMP Timeout (net-snmp uses MICROSECONDS
        instead seconds!)

2007-08-23  Sancho Lerena  <slerena@gmail.com>

	* Fixed a BUG in daemon launcher scripts that makes to do not stop servers :(
	
	* Added a updated README.

	* lib/PandoraFMS/Config.pm, bin/pandora_snmpconsole: Real fix for problem in 
	snmplogfile.

2007-08-21 Sancho Lerena <slerena@gmail.com>

	* conf/pandora_server.conf: Final fixes for default file.

	* lib/PandoraFMS/Config.pm: Fixed stupid typo in snmpconsole parameter.

	* bin/*: Disabled flush for each I/O (ready for production).

2007-08-06 Sancho Lerena <slerena@gmail.com>

	* DB.pm: Alert time support uses TIME format instead numeric (changes requested
	by esanchezm).

2007-08-02 Sancho Lerena <slerena@gmail.com>

	* Makefile.PL: Missing dep updated and .pl extensions purged.

	* All (4) startup scripts: Updated startup script.

	* lib/PandoraFMS/Config.pm: Now servers dont get "Homedir" from command line, get
	config file directly

	* bin/pandora_recon, bin/pandora_server, bin/pandora_network, bin/pandora_snmpconsole:
	Renamed (deleted .pl).

	* Final changes (link is now over bin, and lib is real dir, for work
	with Makefile.PL).

	* lib: Linked to bin/PandoraFMS, for use in Makefile.PL

	* Makefile.PL: Perl standard interface for make (to install)

	* bin/pandora_db.pl: Some small fixes and information strings updated.

2007-07-31  Sancho Lerena  <slerena@gmail.com>

        * util/snmptrapd: Deleted binary.

        * pandora_snmpconsole: Fixed startup scripts. Many checks added to
        manage NetSNMP Trap daemon. Now uses /usr/sbin/snmptrapd by
        default. Solved many problems. This also solve bug #1763691.

        * conf/pandora_server.conf: Added snmp_logfile token (before
        inside CODE!, UGLY!).
